
0.6.0 -

  * added --no-daemon and --pid-file
  * added --no-proxy to disable the proxy 
  * added testcases 
  * added support for proxy.response.packets
  * added hooks for read_auth() and read_handshake()
  * added connection pooling

  * fixed decoding of len-encoded ints for 3-byte notation
  * fixed check for glib2 to require at least 2.6.0
  * fixed mem-leak with proxy.response.* is used
  * fixed handling of (SQL) NULL in result-sets
  * fixed inj.resultset.affected_rows on SELECT queries
  * fixed len-encoding on proxy.resulsets
  * fixed assertion when all backends are down and we try to connect
  * fixed assertion when connection to the MySQL 6.0.1

0.5.1 - 2007-06-30

  * added script examples for rewriting and injection
  * added support for UNIX sockets
  * added protection against duplicate resultsets from a script
  * added missing dependency to libmysqlclient-dev to the INSTALL file
  * added support for pre-4.1 passwords in a 4.1 connection
  * added inj.query_time and inj.response_time into the lua scripts
  * added resultset.affected_rows and resultset.insert_id
  * added proxy.VERSION

  * changed --proxy.profiling to --proxy-skip-profiling

  * fixed assertion when read_query_result() is not provided 
    when PROXY_SEND_QUERY is used
  * fixed warning if connect_server() is not provided
  * fixed handling of duplicate ERR on COM_CHANGE_USER in MySQL 5.1.18+
  * fixed compile error with MySQL 4.1.x on missing COM_STMT_*
  * fixed mysql check in configure to die when mysql.h isn't detected
  * fixed crash on fields > 250 bytes when the resultset is inspected
  * fixed assertion when a error occurs at initial script exec time

0.5.0 - 2007-06-19

  * added GPLv2 headers to the build
  * added automake/autoconf support
  * added cmake support
