@@ -5,7 +5,8 @@
   * added --no-proxy to disable the proxy 
   * added testcases 
   * added support for proxy.response.packets
-  * added hooks for read_auth() and read_handshake()
+  * added hooks for read_auth(), read_handshake() and read_auth_result()
+  * added support in read_query_result() to overwrite the result-set
   * added connection pooling
 
   * fixed decoding of len-encoded ints for 3-byte notation
